--- a/NewTodoForm.css
+++ b/NewTodoForm.css
@@ -26,7 +26,8 @@
     text-transform: uppercase;
     font-weight: bold;
     border: 1px solid rgba(255, 255, 255, 0.3);
-    margin-left: 5px;
+    margin-left: 1px;
+    margin-top: 10px;
     cursor: pointer;
     transition: background 0.2s ease-out;
 }
