--- a/NewTodoForm.css
+++ b/NewTodoForm.css
@@ -2,6 +2,8 @@
     margin-top: 3rem;
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 
 .NewTodoForm label {
